HTML editor: Better fix for overflowing panel-body [ubhd:125]

--- a/src/components/anno-editor-modal/anno-editor-modal.scss
+++ b/src/components/anno-editor-modal/anno-editor-modal.scss
@@ -1,9 +1,8 @@
-.modal-body {
-  overflow: auto; /* <-- Defend footer buttons against oversize content. */
-}
-
 .draggable {
-    .modal-header {
-        cursor: move
-    }
+  .modal-header {
+    cursor: move;
+  }
+  .modal-footer {
+    z-index: 5;
+  }
 }
