--- a/src/components/anno-editor/anno-editor.scss
+++ b/src/components/anno-editor/anno-editor.scss
@@ -35,3 +35,9 @@
 .annoeditor-bootstrap-tabs .nav > li.secret {
   display: none;
 }
+
+.panel-body .row { margin: 0; }
+
+.annoeditor-html-editor > .panel-body {
+  overflow-y: auto; /* Workaround for overly-tall HTML editor */
+}
